--- a/Superheroes/MainWindow.xaml
+++ b/Superheroes/MainWindow.xaml
@@ -10,20 +10,66 @@
         <Style TargetType="Image" x:Key="superheroType">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Width" Value="40"/>
+            <Setter Property="Visibility" Value="Collapsed"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=HeroeActual.Xmen}" Value="True">
+                    <Setter Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Image" x:Key="xmen" BasedOn="{StaticResource superheroType}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=HeroeActual.Xmen}" Value="True">
+                    <Setter Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Image" x:Key="vengador" BasedOn="{StaticResource superheroType}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=HeroeActual.Vengador}" Value="True">
+                    <Setter Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
         <local:BackgroundColorConverter x:Key="conversorFondo"/>
         <local:HeroGroupConverter x:Key="heroGroupConversor"/>
-
+        <Style TargetType="Image" x:Key="superhero">
+            <Setter Property="Stretch" Value="UniformToFill"/>
+            <Setter Property="Opacity" Value="0.5"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Opacity" Value="1"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Border" x:Key="bordeSH">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=superHeroImage, Path=IsMouseOver}" Value="True">
+                    <Setter Property="BorderThickness" Value="3"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="DockPanel" x:Key="mainContainer">
+            <Setter Property="Background" Value="Red"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=HeroeActual.Heroe}" Value="True">
+                    <Setter Property="Background" Value="PaleGreen"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
-    <DockPanel x:Name="superheroeGrid" Background="{Binding Path=HeroeActual.Heroe, Converter={StaticResource conversorFondo}}">
+    <DockPanel x:Name="superheroeGrid" Style="{StaticResource mainContainer}">
         <DockPanel DockPanel.Dock="Top" LastChildFill="False" Margin="10,5,10,0">
             <TextBlock DockPanel.Dock="Left" Text="{Binding Path=HeroeActual.Nombre}" Foreground="White" FontWeight="Bold" FontSize="40"  >
                 <TextBlock.Effect>
                     <DropShadowEffect/>
                 </TextBlock.Effect>
             </TextBlock>
-            <Image DockPanel.Dock="Right" Source="assets/xmen.png" Visibility="{Binding Path=HeroeActual.Xmen, Converter={StaticResource heroGroupConversor}}" Style="{StaticResource superheroType}"></Image>
-            <Image DockPanel.Dock="Right" Source="assets/avengers.png" Visibility="{Binding Path=HeroeActual.Vengador, Converter={StaticResource heroGroupConversor}}" Style="{StaticResource superheroType}"></Image>
+            <Image x:Name="xmenImage" DockPanel.Dock="Right" Source="assets/xmen.png"  Style="{StaticResource xmen}"></Image>
+            <Image x:Name="vengadorImage" DockPanel.Dock="Right" Source="assets/avengers.png" Style="{StaticResource vengador}"></Image>
             
         </DockPanel>
 
@@ -43,6 +89,8 @@
                 </Image.RenderTransform>
             </Image>
         </StackPanel>
-        <Image  Source="{Binding Path=HeroeActual.Imagen}" Stretch="UniformToFill" Margin="10"/>
+        <Border Style="{StaticResource bordeSH}">
+            <Image x:Name="superHeroImage" Source="{Binding Path=HeroeActual.Imagen}"  Style="{StaticResource superhero}"/>
+        </Border>
     </DockPanel>
 </Window>
